---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/inheritance/constructor.lox
---
success: true
exit_code: 0
----- stdout -----
value

----- stderr -----
